[gd_scene load_steps=3 format=3 uid="uid://bfbrwohdbtw5h"]

[ext_resource type="Script" uid="uid://bkd04glcraele" path="res://main/scripts/ingedient.gd" id="1_aqdqj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h32wm"]
size = Vector2(64, 64)

[node name="Ingredient" type="CharacterBody2D"]
collision_mask = 14
script = ExtResource("1_aqdqj")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_h32wm")
metadata/_edit_lock_ = true

[node name="IngredientSprite" type="Sprite2D" parent="."]
position = Vector2(4.76837e-07, 4.76837e-07)
scale = Vector2(0.27, 0.27)

[node name="Button" type="Button" parent="IngredientSprite"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -119.0
offset_top = -119.0
offset_right = 118.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="button_down" from="IngredientSprite/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="IngredientSprite/Button" to="." method="_on_button_button_up"]
